--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "mongoose": "^8.2.1",
     "next": "14.1.1",
     "next-cloudinary": "^6.3.0",
+    "next-themes": "^0.3.0",
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "sonner": "^1.5.0",
     "stripe": "^15.1.0",
     "svix": "^1.20.0",
     "tailwind-merge": "^2.2.1",
